--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-streamlit==1.38.0 pix2tex==0.1.3 Pillow==10.4.0 sympy==1.13.3 matplotlib==3.9.2 numpy==1.26.4 nest-asyncio==1.6.0 albumentations==1.4.8 torch==2.3.0 opencv-python-headless==4.9.0.80
+streamlit
+pix2tex 
+Pillow
+sympy  
+nest-asyncio
+albumentations
+torch 
+opencv-python-headless
